# Channel-Checker-Bottleneck---WARN---Crit-Mins

./: .dockerignore  .gitignore  Data Sources.md  Dockerfile  README.md  docker-compose.yml  env.example  pyproject.toml
data/: .gitkeep
data/archive/: .gitkeep
data/manifests/: .gitkeep  shipping.json  usa_trade.json  va_healthcare.json
frontend-react/: index.html  package-lock.json  package.json
frontend-react/src/: App.tsx  main.tsx
frontend-react/src/api/: bottlenecks.ts  collectors.ts  data.ts  forecasts.ts  reports.ts  research.ts  sectors.ts  tradeFlows.ts  warn.ts
frontend-react/src/components/: DependencyGraph.tsx  GraphControls.tsx  Navigation.tsx  PropagationPlayer.tsx  SectorTooltip.tsx
frontend-react/src/hooks/: useSectorData.ts
frontend-react/src/pages/: Bottlenecks.tsx  CommodityFlows.tsx  Dashboard.tsx  DataExplorer.tsx  Forecasts.tsx  Home.tsx  Reports.tsx  ResearchDashboard.tsx  SectorDependencies.tsx  WarnNotices.tsx  index.ts
frontend-react/src/styles/: graph.css
frontend-react/src/types/: react-simple-maps.d.ts
monitoring/: prometheus.yml
scripts/: backfill_data.py  backfill_warn.py  init_db.py  init_db.sql  test_apis.py  warn_wipe_rebuild.py
scripts/migrations/: 001_rename_metadata_to_extra_data.sql  002_warn_validation_columns.sql
src/: __init__.py
src/analysis/: __init__.py  anomaly_detection.py  bottleneck_detector.py  io_processor.py  propagation_engine.py  sector_impact.py  sector_mapper.py  signals.py
src/analysis/monitors/: __init__.py  base_monitor.py  capacity_utilization_monitor.py  critical_mineral_risk.py  energy_crunch_detector.py  inventory_sales_monitor.py  labor_tightness_monitor.py  price_spike_detector.py  shipping_congestion_index.py
src/api/: __init__.py  main.py
src/api/middleware/: __init__.py  metrics.py  rate_limit.py
src/api/routes/: __init__.py  analysis.py  bottlenecks.py  collectors.py  data.py  (+6 more)
src/config/: bea_industry_mapping.py  data_frequencies.py  sectors.py  settings.py
src/data_ingestion/: __init__.py  base_collector.py  change_detector.py  file_collector.py  rate_limiter.py  scheduler.py
src/forecasting/: __init__.py  integration.py  llm_config.py  llm_forecaster.py  prompts.py
src/processing/: __init__.py  normalizer.py  validator.py
src/services/: __init__.py  alert_service.py  api_key_monitor.py  notification_service.py
src/storage/: __init__.py  archive_manager.py  log_handler.py  models.py  redis_cache.py  timescale.py
tests/: __init__.py  conftest.py
tests/test_analysis/: test_anomaly_detection.py  test_monitors.py  test_propagation_engine.py  test_sector_mapper.py
tests/test_api/: test_endpoints.py
tests/test_collectors/: conftest.py  test_aircraft_parts.py  test_bea_io.py  test_commodity.py  test_energy_flows.py  test_fred.py  test_minerals.py  test_sec_edgar.py  test_ship_manufacturing.py  test_shipping.py  test_steel_production.py  test_vehicle_production.py  test_warn_states.py
tests/test_forecasting/: test_llm_forecaster.py
(+63 files in other folders)
