[tool.poetry]
name = "channel-check-researcher"
version = "0.1.0"
description = "Bottom-up fundamental channel check researcher for detecting economic bottlenecks"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
# Web Framework
fastapi = "^0.115.0"
uvicorn = {extras = ["standard"], version = "^0.32.0"}
# Database
sqlalchemy = {extras = ["asyncio"], version = "^2.0.0"}
asyncpg = "^0.30.0"
alembic = "^1.14.0"
# Redis
redis = {extras = ["hiredis"], version = "^5.2.0"}
# Data Processing
pandas = "^2.2.0"
polars = "^1.17.0"
numpy = "^2.0.0"
# Time Series & Analysis
statsmodels = "^0.14.0"
scipy = "^1.14.0"
scikit-learn = "^1.6.0"
# API Clients
httpx = "^0.28.0"
aiohttp = "^3.11.0"
aiolimiter = "^1.2.0"
# Data Sources
fredapi = "^0.5.0"
pytrends = "^4.9.0"
# File-based data sources
openpyxl = "^3.1.0"      # Excel file parsing
zstandard = "^0.22.0"    # zstd compression for archives
feedparser = "^6.0.0"    # RSS/Atom feed parsing
# Research Intelligence
rapidfuzz = "^3.6.0"     # Fast fuzzy string matching for deduplication
# Web Scraping (for WARN Act notices)
beautifulsoup4 = "^4.12.0"  # HTML parsing for state DOL websites
lxml = "^5.1.0"             # Fast XML/HTML parser backend
pdfplumber = "^0.11.0"      # PDF table extraction for WARN notices (ID, NM, NC)
# Scheduling
apscheduler = "^3.10.0"
# Configuration
pydantic = "^2.10.0"
pydantic-settings = "^2.6.0"
python-dotenv = "^1.0.0"
# Visualization & Frontend
streamlit = "^1.40.0"
plotly = "^5.24.0"
# Utilities
tenacity = "^9.0.0"
structlog = "^25.5.0"
python-dateutil = "^2.9.0"
# Monitoring
prometheus-client = "^0.21.0"
# Forecasting integration
# NOTE: forecasting-tools is a local development dependency, not available in Docker
# For Docker builds, the forecasting module uses fallback implementations
# forecasting-tools = { path = "/media/veracrypt1/Cursor/Cursor Projects/Metaculus Forcasting PT. 2/Meta-Working", develop = true }

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^6.0.0"
httpx = "^0.28.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
pre-commit = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
# NOTE: Known external library warning (do not suppress):
# structlog internally uses datetime.utcnow() which triggers a DeprecationWarning
# in Python 3.12+. This is tracked upstream and will be fixed in a future release.
# See: https://github.com/hynek/structlog/issues - datetime.utcnow() deprecation
